@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

class User {
    - name: String
    - email: String
    - phone: String
    - password: String
    - role: String
}

class Item {
    - image: String
    - condition: String
    - category: Category
}

class Advertisement {
    - title: String
    - description: String
    - date: Date
    - municipality: String
    - status: AdvertisementStatus
    + deleteAdvertisement(): void
}

class Category {
    - designation: String
}

class AdvertisementController {
    + searchAdvertisement(category, municipality, keyWords)
    + deleteAdvertisement(advertisementId)
}

class AdvertisementService {
    + searchAdvertisement(category, municipality, keyWords)
    + deleteAdvertisement(advertisementId)
}

class AdvertisementRepository {
    + searchAdvertisement(category, municipality, keyWords)
    + deleteAdvertisement(advertisementId)
}

' --- Associações ---
User "1" -- "0..*" Advertisement : requests
Advertisement "1" -- "1" Item : has >
Advertisement "1" -- "1" Category : belongs to >

AdvertisementController ..> AdvertisementService
AdvertisementService ..> AdvertisementRepository
AdvertisementRepository "1" --> "*" Advertisement : advertisement

@enduml
